Bug 109859 - Crash in: sclo.dll
Summary: Crash in: sclo.dll
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Dennis Francis
URL:
Whiteboard: target:6.0.0 target:5.4.1
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2017-07-28 19:50 UTC by Telesto
Modified: 2017-08-20 15:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["sclo.dll"]


Attachments
gdb backtrace (25.44 KB, text/plain)
2017-08-01 14:20 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-07-28 19:50:35 UTC
This bug was filed from the crash reporting server and is br-9163f0e7-73d0-4831-ba4d-41d50df495ae.
=========================================

1. Open Calc
2. Sheet -> Insert Sheet
3. Add 3 sheets (default settings)
4. Right Click sheet 2 -> Select All Sheets
5. Right Click sheet 2 - Move or Copy sheet
5. Copy to New Document -> OK
6. In the New document -> Right Click sheet 3 -> Select All Sheets
7. Right Click sheet 3 - Move or Copy sheet -> Press OK (default settings) -> Crash
Comment 1 raal 2017-07-29 13:14:35 UTC
I can confirm with Version: 6.0.0.0.alpha0+
Build ID: e0bafa78e3ad0df397d78cd65ad19bd5b07dc5f2
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-07-20_22:42:49
Comment 2 raal 2017-07-29 15:00:17 UTC
regression, bibisect-42max - unable to bisect, lots of skipped commits in the repo(Calc crash)
Comment 3 Xisco Faulí 2017-08-01 14:20:18 UTC
Created attachment 135052 [details]
gdb backtrace
Comment 4 Xisco Faulí 2017-08-01 16:02:50 UTC
Actually, this is a recent regression. Introduced by:

author	Eike Rathke <erack@redhat.com>	2017-03-07 09:46:12 (GMT)
committer	Eike Rathke <erack@redhat.com>	2017-03-07 09:51:50 (GMT)
commit 73dec49802ef8fc42c5719efaa42a33cde68e569 (patch)
tree 183c172cab6fc8bda2f7b7e1bee0b85e93d8241b
parent 4c8059a3e140171399ac85ceb882d23bb458599d (diff)
a size is a size

Bisected with bibisect-linux-64-5.4

Adding Cc: to Eike Rathke
Comment 5 Commit Notification 2017-08-07 08:00:41 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bc6f56e4bb27f802e90303073ba5e2a676baa39b

tdf#109859: Update the view data of new document when...

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Dennis Francis 2017-08-08 05:20:23 UTC
Fixed in master, waiting for review in 5-4 branch
Comment 7 Commit Notification 2017-08-08 05:28:59 UTC
Dennis Francis committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5b121b12b50c0db8f5b68616cd8ad95baf91b4f4&h=libreoffice-5-4

tdf#109859: Update the view data of new document when...

It will be available in 5.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Mike B 2017-08-19 19:28:37 UTC
FWIW, I just got this out of the blue: http://crashreport.libreoffice.org/stats/crash_details/b7124e2e-133c-4da6-a205-483db2270ccc#details

Had opened a bookkeeping spreadsheet with multiple pages, many cross-page links, and some external links. Did some updates, then closed with save. Got the crash and recovery dialog - checked for add-ons to be reset - the recovered spreadsheet appears to be OK and re-saved and re-opened correctly.

Only thing unusual in this session was that I accidentally clicked on a page tab to switch while the external links were still going on. Switch didn't occur until link updates were done. Expected that, but I usually wait...

Now that's interesting: The "About" box in LO Calc reports OS as Windows 6.19; it's actually 10.0.15063 (Creators Update, 1703) which is correctly reported in the crashreport.

Prefer to wait for the public release since I use this in production (at home).
Comment 9 Xisco Faulí 2017-08-20 15:32:06 UTC
(In reply to Mike B from comment #8)
> FWIW, I just got this out of the blue:
> http://crashreport.libreoffice.org/stats/crash_details/b7124e2e-133c-4da6-
> a205-483db2270ccc#details
> 
> Had opened a bookkeeping spreadsheet with multiple pages, many cross-page
> links, and some external links. Did some updates, then closed with save. Got
> the crash and recovery dialog - checked for add-ons to be reset - the
> recovered spreadsheet appears to be OK and re-saved and re-opened correctly.
> 
> Only thing unusual in this session was that I accidentally clicked on a page
> tab to switch while the external links were still going on. Switch didn't
> occur until link updates were done. Expected that, but I usually wait...
> 
> Now that's interesting: The "About" box in LO Calc reports OS as Windows
> 6.19; it's actually 10.0.15063 (Creators Update, 1703) which is correctly
> reported in the crashreport.
> 
> Prefer to wait for the public release since I use this in production (at
> home).

Could you please create a new report for this? Thanks