tdf#109859: Update the view data of new document when...

...a set of sheets are copied to a new spreadsheet document.

Change-Id: I47642b4aa2543c193328d9515564bfbacf044bbc
Reviewed-on: https://gerrit.libreoffice.org/40764
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Dennis Francis <dennis.francis@collabora.co.uk>
(cherry picked from commit bc6f56e4bb27f802e90303073ba5e2a676baa39b)